--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.23",
+    "@types/node-sass": "^4.11.3",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.62.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
